# interview-buddy

./: readme.md
backend/: express-app.js
backend/api/: mock.js
backend/database/: connection.js
backend/database/models/: gd.js  mock.js  user.js
backend/database/repository/: mock-repository.js
backend/services/: auth-service.js  mock-service.js
interview-video-call/: index.html  package-lock.json  package.json  server.js  tailwind.config.js
interview-video-call/src/: App.tsx  index.css  socket.ts  types.ts
interview-video-call/src/components/: Chat.tsx  CodeEditor.tsx  VideoCall.tsx
interviewer-panel/src/app/(DashboardLayout)/interviewer/: page.jsx
interviewer-panel/src/app/(DashboardLayout)/layout/shared/logo/: Logo.jsx
interviewer-panel/src/app/(DashboardLayout)/layout/vertical/sidebar/: MenuItems.js
student-panel/src/app/(DashboardLayout)/layout/shared/logo/: Logo.jsx
student-panel/src/app/(DashboardLayout)/layout/vertical/sidebar/: MenuItems.js
student-panel/src/app/(DashboardLayout)/mock-interview/: page.jsx
vision-model/: app.py  main.py  pyproject.toml
